--- a/SIG_HTML/Exercises/exercise 7/index.html
+++ b/SIG_HTML/Exercises/exercise 7/index.html
@@ -61,7 +61,7 @@
     <section class="second">
    
 
-        <div class="grid"> 
+        <div class="grid" style="margin-top: 15px;"> 
             <div class="item">
                 <div class="item-lang">English</div>
                 <button class="btn blue"><a href="/ue_english.exe">Download 32-bit</a></button>
