--- a/SIG_HTML/CSS Animations/index.html
+++ b/SIG_HTML/CSS Animations/index.html
@@ -18,6 +18,10 @@
         animation-name: identifier;
         animation-duration: 4s;
         animation-iteration-count: 3;
+        animation-timing-function: ease-in-out;
+        animation-delay: 2s;
+        /* animation-direction: alternate-reverse; */
+        animation-play-state: paused;
     }
     @keyframes identifier {
         from{
