--- a/SIG_HTML/CSS Animations/index.html
+++ b/SIG_HTML/CSS Animations/index.html
@@ -15,19 +15,22 @@
         width: 50px;
         height: 45px;
         background-color: aqua;
-        animation-name: identifier;
+        /* animation-name: identifier;
         animation-duration: 4s;
         animation-iteration-count: 3;
         animation-timing-function: ease-in-out;
         animation-delay: 2s;
-        /* animation-direction: alternate-reverse; */
-        animation-play-state: paused;
+         animation-direction: alternate-reverse; 
+        animation-play-state: paused; */
+        /* animation: name duration timing-function delay iteration-count direction fill-mode; */
+        animation: identifier 1s ease-in-out 2s forwards; 
     }
     @keyframes identifier {
         from{
-            
+            background-color: red;
         }
         to{
+            background-color: green;
             transform: translateX(1000px);
         }
     }
