--- a/SIG_HTML/CSS Object-fit and Object-cover/index.html
+++ b/SIG_HTML/CSS Object-fit and Object-cover/index.html
@@ -13,9 +13,14 @@
         background-color: blueviolet;
     }
     img{
-        height: 634px;
-        width: 688px;
-        object-fit: contain;
+        height: 480px;
+        width: 460px;
+        /* object-fit: contain; */
+        /* object-fit: none; */
+        /* object-fit: cover;*/
+        /* object-fit: scale-down; */
+        /* object-position: bottom right; */
+        object-fit: fill;
     }
 </style>
 <body>
