--- a/SIG_HTML/CSS Object-fit and Object-cover/index.html
+++ b/SIG_HTML/CSS Object-fit and Object-cover/index.html
@@ -10,7 +10,11 @@
         height: 634px;
         width: 688px;
         border: 2px solid black;
-        background-color: blueviolet;
+        /* background-color: blueviolet; */
+        background-image: url('cat.jpg');
+        background-position: center center;
+        background-repeat: no-repeat;
+        background-clip: border-box;
     }
     img{
         height: 480px;
@@ -21,6 +25,7 @@
         /* object-fit: scale-down; */
         /* object-position: bottom right; */
         object-fit: fill;
+        border: 4px solid black;
     }
 </style>
 <body>
