--- a/webgl/assignment 4/20200204037_A2.html
+++ b/webgl/assignment 4/20200204037_A2.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>20200204037</title
+    <title>20200204037</title>
 </head>
 <body>
     <canvas id="webglcanvas" width="600" height="600"></canvas>
