--- a/SIG_HTML/CSS Object-fit and Object-cover/index.html
+++ b/SIG_HTML/CSS Object-fit and Object-cover/index.html
@@ -31,7 +31,7 @@
 <body>
     <div class="container">
         <img src="cat.jpg" alt="cat">
-
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quae</p>
     </div>
 </body>
 </html>
