--- a/SIG_HTML/CSS Filters/index.html
+++ b/SIG_HTML/CSS Filters/index.html
@@ -9,6 +9,17 @@
     img {
         filter: blur(5px);
         cursor: pointer;
+        filter: blur(5px);
+filter: brightness(0.4);
+filter: contrast(200%);
+filter: drop-shadow(16px 16px 20px blue);
+filter: grayscale(50%);
+filter: hue-rotate(90deg);
+filter: invert(75%);
+filter: opacity(25%);
+filter: saturate(30%);
+filter: sepia(60%);
+
     }
 </style>
 <body>
