--- a/SIG_HTML/Project/NetFlix Clone/index.html
+++ b/SIG_HTML/Project/NetFlix Clone/index.html
@@ -3,11 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>NetFlix Clone</title>
 </head>
 <body>
-    <main>
+    <div class="main">
+        <nav style="color: white;">
+            <span><img width="100" src="image/logo.svg" alt=""></span>
+            <div>
+                <button>English</button>
+                <button>Sign In</button>
+            </div>
+            
+        </nav>
+        <div class="box">
+
+        </div>
+    </div>
       
-    </main>
 </body>
 </html>
