--- a/SIG_HTML/Project/NetFlix Clone/index.html
+++ b/SIG_HTML/Project/NetFlix Clone/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="main">
-        <nav style="color: white;">
+        <nav >
             <span><img width="100" src="image/logo.svg" alt=""></span>
             <div>
                 <button>English</button>
@@ -17,7 +17,11 @@
             
         </nav>
         <div class="box">
-
+        </div>
+        <div class="hero">
+            <span>Enjoy Big movies, hit series and more from $149.</span>
+            <span>Join today. Cancel anytime.</span>
+            <span>Ready to watch? Enter your email to create or restart your membership.</span>
         </div>
     </div>
       
