--- a/SIG_HTML/Project/NetFlix Clone/index.html
+++ b/SIG_HTML/Project/NetFlix Clone/index.html
@@ -11,7 +11,7 @@
         <nav >
             <span><img width="100" src="image/logo.svg" alt=""></span>
             <div>
-                <button>English</button>
+                <button>English <img src="image/lang.png" alt=""></button>
                 <button>Sign In</button>
             </div>
             
