--- a/SIG_HTML/Project/NetFlix Clone/index.html
+++ b/SIG_HTML/Project/NetFlix Clone/index.html
@@ -23,6 +23,10 @@
             <span>Enjoy Big movies, hit series and more from $149.</span>
             <span>Join today. Cancel anytime.</span>
             <span>Ready to watch? Enter your email to create or restart your membership.</span>
+            <div>
+                <input type="text" placeholder="Email address">
+                <button>Get Started</button>
+            </div>
         </div>
     </div>
       
