--- a/SIG_HTML/Project/NetFlix Clone/index.html
+++ b/SIG_HTML/Project/NetFlix Clone/index.html
@@ -28,6 +28,9 @@
                 <button>Get Started</button>
             </div>
         </div>
+        <div class="separation">
+            
+        </div>
     </div>
       
 </body>
