--- a/SIG_HTML/Project/NetFlix Clone/index.html
+++ b/SIG_HTML/Project/NetFlix Clone/index.html
@@ -12,8 +12,8 @@
         <nav >
             <span><img width="100" src="image/logo.svg" alt=""></span>
             <div>
-                <button>English <img src="image/lang.png" alt=""></button>
-                <button>Sign In</button>
+                <button class="btn">English </button>
+                <button class="btn btn-red-sm">Sign In</button>
             </div>
             
         </nav>
@@ -23,9 +23,9 @@
             <span>Enjoy Big movies, hit series and more from $149.</span>
             <span>Join today. Cancel anytime.</span>
             <span>Ready to watch? Enter your email to create or restart your membership.</span>
-            <div>
+            <div class="hero-buttons">
                 <input type="text" placeholder="Email address">
-                <button>Get Started</button>
+                <button class="btn btn-red">Get Started</button>
             </div>
         </div>
         <div class="separation">
