--- a/SIG_HTML/Project/NetFlix Clone/index.html
+++ b/SIG_HTML/Project/NetFlix Clone/index.html
@@ -25,7 +25,7 @@
             <span>Ready to watch? Enter your email to create or restart your membership.</span>
             <div class="hero-buttons">
                 <input type="text" placeholder="Email address">
-                <button class="btn btn-red">Get Started</button>
+                <button class="btn btn-red">Get Started &gt;</button>
             </div>
         </div>
         <div class="separation">
