--- a/SIG_HTML/Project/NetFlix Clone/index.html
+++ b/SIG_HTML/Project/NetFlix Clone/index.html
@@ -96,6 +96,14 @@
             </svg>
 
         </div>
+        <div class="faqbox">
+            <span>What is NetFlix</span>
+            <svg width="24" height="24" viewBox="0 0 24 24" fill="white" xmlns="http://www.w3.org/2000/svg">
+                <path d="M12 4V20" stroke="#141B34" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+                <path d="M4 12H20" stroke="#141B34" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+            </svg>
+
+        </div>
     </sectio>
 
     
