--- a/SIG_HTML/Project/NetFlix Clone/index.html
+++ b/SIG_HTML/Project/NetFlix Clone/index.html
@@ -102,7 +102,7 @@
                 <path d="M12 4V20" stroke="#141B34" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
                 <path d="M4 12H20" stroke="#141B34" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
             </svg>
-
+            sukrobar sesh korbo eita
         </div>
     </sectio>
 
