--- a/HTML/basic_tag.html
+++ b/HTML/basic_tag.html
@@ -96,6 +96,7 @@
         <option>Dhaka City</option>
         <option>Comilla City</option>
         <option>Rangpur City</option>
+        <option>Sylhet City</option>
     </select>
     <br><br>
     <button>Submit</button>
